force-app/main/default/objects/DER_System__c/DER_System__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>DER System</label>
</CustomObject>