force-app/main/default/objects/DER_System__c/fields/DER_API_Debug_Enabled__c.field-meta.xml
<CustomField>
    <fullName>DER_API_Debug_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DER API Debug Enabled</label>
    <type>Checkbox</type>
</CustomField>