force-app/main/default/objects/DER_System__c/fields/DER_API_Debug_User_Id__c.field-meta.xml
<CustomField>
    <fullName>DER_API_Debug_User_Id__c</fullName>
    <label>DER API Debug User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>