force-app/main/default/objects/DER_System__c/fields/UOM_API_Debug_Enabled__c.field-meta.xml
<CustomField>
    <fullName>UOM_API_Debug_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UOM API Debug Enabled</label>
    <type>Checkbox</type>
</CustomField>