force-app/main/default/objects/DER_System__c/fields/UOM_Incident_Fix_Enabled__c.field-meta.xml
<CustomField>
    <fullName>UOM_Incident_Fix_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UOM Incident Fix Enabled</label>
    <type>Checkbox</type>
</CustomField>